# fileswell

./: CITATION.cff  README.md  pyproject.toml
fileswell/: fileswell.py
src/fileswell/: __init__.py  _profile_extraction.py  _roi.py  fileswell.py
