[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fileswell"
version = "1.0.0"
authors = [
    { name = "Jannis Ahlers", email = "jannis.ahlers@monash.edu" }
]
description = "A tool to extract line profiles of edges"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "uncertainties>=3.2.0",
    "scikit-fda>=0.9.0",
    "scikit-image>=0.19.0",
    "shapely>=1.8.0",
    "roifile>=2024.9.15",
    "matplotlib>=3.4.0",
    "natsort>=8.4.0",
    "scikit-learn==1.4.0",
]

[project.urls]
"Homepage" = "https://github.com/jnahlers/spylia"
"Bugtracker" = "https://github.com/jnahlers/spylia/issues"
